--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       dockerfile: docker/api.Dockerfile
     image: datathon_fiap2025-api
     container_name: dm_api
+    networks: [dm_net]
     ports:
       - "8000:8000"
     environment:
@@ -27,6 +28,7 @@ services:
       dockerfile: docker/ui.Dockerfile
     image: datathon_fiap2025-ui
     container_name: dm_ui
+    networks: [dm_net]
     ports:
       - "8501:8501"
     environment:
@@ -43,6 +45,7 @@ services:
       dockerfile: docker/drift.Dockerfile
     image: datathon_fiap2025-drift
     container_name: dm_drift
+    networks: [dm_net]
     environment:
       - MONITORING_DIR=/monitoring
     volumes:
@@ -58,6 +61,7 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: dm_prometheus
+    networks: [dm_net]
     volumes:
       - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
     ports:
@@ -70,6 +74,7 @@ services:
   grafana:
     image: grafana/grafana:latest
     container_name: dm_grafana
+    networks: [dm_net]
     ports:
       - "3000:3000"
     environment:
@@ -80,3 +85,7 @@ services:
     depends_on:
       - prometheus
     restart: unless-stopped
+    
+networks:
+  dm_net:
+    driver: bridge
